Started on landing page with triangle generation and rotation

--- a/src/css/components/Navbar.css
+++ b/src/css/components/Navbar.css
@@ -3,6 +3,9 @@ nav {
   height: 50px;
   background-color: #f7db69;
 
+  position: absolute;
+  z-index: 10;
+
   display: flex;
   justify-content: center;
 }
